--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -53,6 +53,13 @@
       <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
       <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewImports.cshtml" />
       <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\PartialCreateEdit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Workers\PartialDetailsDelete.cshtml" />
     </ItemGroup>
 
 </Project>
