WebApp Controllers don't work

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,13 +1,12 @@
 {
   "JWT": {
-    "Key": "lszkvh68969#¤%09u adwg,cdsajp_-niodf)=+uyflyud",
+    "Key": "lszkvh68969#¤%09u adwg,cdsajp_-nklbiodf)=+uyflyud",
     "Issuer": "https://itcollege.ee",
     "ExpireDays": 30
   },
   
   "ConnectionStrings": {
-    "MysqlConnection": "server=alpha.akaver.com;database=student2018_iiounm_homeProject;user=student2018;password=student2018",
-    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MysqlConnection": "server=alpha.akaver.com;database=student2018_iiounm_homeProject;user=student2018;password=student2018"
   },
   "Logging": {
     "LogLevel": {
