--- a/DAL.App.EF/DAL.App.EF.csproj
+++ b/DAL.App.EF/DAL.App.EF.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Contracts.DAL.App\Contracts.DAL.App.csproj" />
+      <ProjectReference Include="..\DAL.App.DTO\DAL.App.DTO.csproj" />
       <ProjectReference Include="..\DAL.Base.EF\DAL.Base.EF.csproj" />
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
