--- a/WebClient/tsconfig.json
+++ b/WebClient/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "target": "es5",
     "module": "esnext",
     "emitDecoratorMetadata": true,
